# jsitter

./: .gitignore  .gitmodules  LICENSE  README.md  make.sh  pom.xml
clj/: .gitignore  deps.edn
clj/clj/: cljsitter.clj
native/: .gitignore  CMakeLists.txt
native/src/: java_api.c  java_api.cpp  tests.c  tests.cpp
src/main/java/com/jetbrains/jsitter/: JSitter.java  LibLoader.java  zippers.kt
src/main/java/jsitter/interop/: JSitter.java  LibLoader.java
src/main/kotlin/: API.kt  impl.kt
src/main/kotlin/jsitter/api/: ReducingZipper.kt  api.kt
src/main/kotlin/jsitter/impl/: Cleaner.kt  SubtreeAccess.kt  TSLanguage.kt  TSParser.kt  TSTextInput.kt  TSTree.kt  TSZipper.kt  impl.kt
src/test/kotlin/jsitter/test/: tests.kt
